--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>One Page Awesomer</title>
+	<title>Rick Astley Fan Page</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.0/css/bulma.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -19,7 +19,7 @@
 
 			      <div class="column"> <!-- search column -->
 
-			      	<h3 class="title">Search Titles</h1>
+			      	<h3 class="title">Search</h1>
 
 		      		<hr>
 
